feat: Implement gRPC for image processing and update project structure
This commit refactors the image processing logic into a dedicated gRPC service ().
The Flask API () now acts as a gRPC client, forwarding image analysis requests to this new service.

Key changes include:
- **New gRPC Service:** Introduced  and  for high-performance image analysis.
- **API Gateway Integration:** Modified  to communicate with the gRPC service,
  replacing direct image processing.
- **Generated Code:** Added  for gRPC protobuf stubs.
- **Module Relocation:** Moved  to  for better organization.
- **Docker Configuration:** Updated  to orchestrate both  and  services,
  including port exposure.
- **Dockerfile Enhancements:** Adjusted  for  to correctly copy static assets
  and set for local development.
- **Testing Improvements:** Fixed import errors in  and refined error handling
  in to correctly map gRPC status codes to HTTP responses.
- **Documentation Update:** Significantly revised  to reflect the new multi-service
  architecture, provide detailed instructions for Docker-based and local development,
  and include a section for cleaning up Docker resources.

This refactoring improves scalability, maintainability, and performance by
decoupling the image processing from the main API service.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,10 @@ pytest==8.2.2
 pytest-cov==4.1.0
 
 # Code Quality and Linting
+# Code Quality and Linting
 flake8==7.1.0
 black==24.4.2
 mypy==1.10.0
+
+# gRPC code generation
+grpcio-tools==1.64.1
