feat: implement Redis caching for image intensity results
This commit introduces a caching layer to the API gateway to improve
performance and reduce redundant computations.

Key changes:
- Added a Redis service to the docker-compose setup.
- Integrated the `redis-py` client into the Flask application.
- Implemented caching logic in the `/intensity` endpoint:
  - An SHA-256 hash of the image is used as the cache key.
  - On a cache hit, the result is served directly from Redis.
  - On a cache miss, the result is computed by the image_processor
    service and then stored in Redis for future requests.
- Added `X-Cache` header (hit/miss) to the response for observability.
- Updated configuration to be driven by environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
     environment:
       - FLASK_ENV=production
       - GRPC_SERVER_ADDRESS=image_processor:50051
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     depends_on:
       - image_processor
+      - redis
 
   image_processor:
     build:
@@ -19,3 +22,8 @@ services:
       dockerfile: image_processor/Dockerfile
     ports:
       - "50051:50051"
+
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6380:6379"
