--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,9 @@
 pytest==8.2.2
 pytest-cov==4.1.0
 
+# Mocking
+fakeredis==2.23.0
+
 # Code Quality and Linting
 # Code Quality and Linting
 flake8==7.1.0
